<resources>
    <string name="app_name">Finances</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="action_settings">Settings</string>
    <string name="action_historico">Historico</string>
    <string name="graph_desc">Grafico</string>
    <string name="calc_desc">Calculadora</string>
    <string name="savings_desc">Savings</string>
    <string name="ok">Ok</string>
</resources>
