<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_loss"
        android:icon="@drawable/loss"
        android:title="@string/loss"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_gain"
        android:icon="@drawable/gain"
        android:title="@string/gain"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_historico"
        android:title="@string/action_historico"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
</menu>