<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.felipecosta.finances.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="50sp"
        android:id="@+id/money"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/last_update"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageButton
            android:id="@+id/graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/graph"
            android:background="@null"
            android:contentDescription="@string/graph_desc"
           />

        <ImageButton
            android:id="@+id/calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calculator"
            android:background="@null"
            android:contentDescription="@string/calc_desc"
            />

        <ImageButton
            android:id="@+id/savings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/savings"
            android:background="@null"
            android:contentDescription="@string/savings_desc"/>

    </LinearLayout>
</LinearLayout>
